# medical-billing-mcp

./: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
docs/: QUICKSTART.md
docs/api/: tools.md
docs/diagrams/: architecture.md
docs/examples/: claude_desktop_config.json  conversations.md  sample_results.md
src/medical_billing_mcp/: __init__.py  __main__.py  handlers.py  server.py
src/medical_billing_mcp/data/: bundling.json  cpt.json  denials.json  icd10.json  modifiers.json  payers.json
tests/: __init__.py  test_handlers.py
