[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "medical-billing-mcp"
version = "0.1.0"
description = "Open-source MCP server for medical billing knowledge"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Healthcare Community" }
]
keywords = [
    "medical-billing",
    "healthcare",
    "mcp",
    "icd-10",
    "cpt",
    "hcpcs",
    "denial-management",
    "revenue-cycle"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
medical-billing-mcp = "medical_billing_mcp:run"

[project.urls]
Homepage = "https://github.com/Kustode-ce/medical-billing-mcp"
Documentation = "https://github.com/Kustode-ce/medical-billing-mcp#readme"
Repository = "https://github.com/Kustode-ce/medical-billing-mcp"
Issues = "https://github.com/Kustode-ce/medical-billing-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/medical_billing_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
